Added mobile support

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Policy</title>
+    <title>RCSC</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -41,7 +42,7 @@
         </div>
         <div id="stuff">
             <h2>Activities</h2>
-            <p>Lorem Ipsum alsjkdhlaksjdhalksjdhalskjdhaskjdhalksdjhalksdjhalksjdh alskjdhalkjsdhlaksjdhalksjhdalkjsdh alksjdh alkjsdhlakjsdhlaksjdh laksjhdlaksjdh alksjdh alksjdh laksjdh alksjdh laksjhd alksjhd</p>
+            <p>Lorem Ipsum alsjkdhlaksjdhalksjdhalskj dhaskjdhalksdjhalksdjhalksjdh alskjdhalkjsdhlaksjdhalksjhdalkjsdh alksjdh alkjsdhlakjsdhlaksjdh laksjhdlaksjdh alksjdh alksjdh laksjdh alksjdh laksjhd alksjhd</p>
         </div>
     </div>
 </body>
